[package]
name = "digits-of-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
pprof = { version = "0.15.0", features = ["flamegraph", "protobuf-codec"], optional = true }

[features]
default = []
profiling = ["pprof"]

[profile.profiling]
inherits = "release"
debug = true
